# KeyFall

./: .gitignore  pyproject.toml
docs/: competition.md
docs/plans/: 0001_load_song.md  0002_render_waterfall.md  0003_capture_midi_input.md  0004_evaluate_hit.md  0005_wait_mode_playback.md  0006_split_hands.md  0007_synthesize_audio.md  0008_track_progress.md  0009_render_notation.md  0010_select_section.md  0011_free_play_sandbox.md  0012_tempo_scaling.md  0013_plugin_system.md  0014_accessibility.md  0015_ui_views_architecture.md  0016_piano_synthesis_improvements.md  0017_ai_features.md
src/keyfall/: __init__.py  __main__.py  accessibility.py  app.py  audio.py  config.py  evaluator.py  free_play.py  midi_input.py  models.py  notation.py  playback.py  progress.py  song_loader.py
src/keyfall/ai/: __init__.py  difficulty.py  practice_planner.py  technique_feedback.py
src/keyfall/plugins/: __init__.py  manager.py
src/keyfall/renderer/: __init__.py  colors.py  hud.py  keyboard.py  waterfall.py
src/keyfall/views/: __init__.py  base.py  freeplay_view.py  menu_view.py  practice_view.py  waterfall_view.py
tests/: test_evaluator.py  test_models.py
